--- a/collision-checker/submission.yaml
+++ b/collision-checker/submission.yaml
@@ -1,5 +1,5 @@
 # challenge name(s); defaults to all compatible challenges
-challenge: ["lx22-collision-check-vali"]
+challenge: ["lx22-collision-check-vali","lx22-collision-check-test"]
 
 # conventions + format
 protocol: "protocol_collision_checking-1"
